main.css
/* ################### Defaults ################# */

body {
  background-color: #000;
  color: #fff;
  background-color: #fff;
  color: #000;
  line-height: 1;
  margin: 0;
  overflow-x: hidden;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

nav, header, footer {
  display: block;
}

nav {
  width: 100%;
  margin: 0;
}

input {
  width: 250px;
}

button {
  width: 175px;
}

/* Banner code based upon https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Basic_Concepts_of_Grid_Layout */

.main-banners-wrapper-1 {
  display: grid;
  grid-gap: 10px;
  margin: 10px;
  grid-template-columns: 1fr 2fr;
}

.main-banner-wrapper {
  display: grid;
  grid-gap: 10px;
  margin: 10px;
}

.main-banner {
  background-image: url(./assets/MeditationBannerMainLarge2thin.png);
  background-position: center;
  background-size: cover;
  min-height: 600px;
  border-radius: 10px;
}

.pane-left-1 {
  padding: 25px;
  display: inline-block;
  background-image: url('./assets/yinyang3small.png');
  background-repeat: no-repeat;
  background-position: center;
  background-color: #ddd;
  /* border: 2px solid black; */
  border-radius: 10px;
  min-height: 420px;
}

.pane-right-1 {
  background-image: url(./assets/MeditationBanner1.png);
  background-position: center;
  background-size: cover;
  min-height: 420px;
  border-radius: 10px;
}

.pane-right-1-reg {
  background-image: url(./assets/MeditationBanner3.png);
  background-position: center;
  background-size: cover;
  min-height: 420px;
  border-radius: 10px;
}

.main-banners-wrapper-2 {
  display: grid;
  grid-gap: 10px;
  margin: 10px;
  grid-template-columns: 1fr 1fr;
}

.pane-left-2 {
  background-image: url(./assets/MeditationBanner2.png);
  background-position: center;
  background-size: cover;
  min-height: 385px;
  border-radius: 10px;
}

.pane-left-2-about {
  background-image: url(./assets/MeditationBanner4.png);
  background-position: center;
  background-size: cover;
  min-height: 385px;
  border-radius: 10px;
}

.pane-left-2-contact {
  background-image: url(./assets/MeditationBanner5.png);
  background-position: center;
  background-size: cover;
  min-height: 385px;
  border-radius: 10px;
}

.pane-right-2 {
  padding: 25px;
  display: inline-block;
  background-image: url('./assets/yinyang3small.png');
  background-repeat: no-repeat;
  background-position: center;
  background-color: #ddd;
  min-height: 385px;
  /* border: 2px solid black; */
  border-radius: 10px;
}

.banner-title {
  color: #fff;
  text-align: center;
  font-size: 3em;
  padding: 30px;
}

.banner-title-right {
  color: #fff;
  text-align: right;
  font-size: 3em;
  padding-right: 20px;
}

/* This menu was taken from Jason Brewer (2020) of Devslopes's Advanced HTML/CSS tutorial. */

nav ul {
  background-color: #F90716;
  overflow: hidden;
  margin: 0;
  padding: 0;
}

ul.topmenu li {
  list-style: none;
  float: left;
}

ul.topmenu li.topmenu-right {
  list-style: none;
  float: right;
}

ul.topmenu li a {
  display: block;
  text-decoration: none;
  min-height: 16px;
  text-align: center;
  padding: 14px;
  text-transform: lowercase;
  color: #eee;
}

ul.topmenu li a:hover {
  background-color: #FFF323;
  color: #222;
}

.main-home {
  width: 100%;
  margin: 0;
  padding: 0 25px 0 25px;
  display: inline-block;
  background-image: url('./assets/yinyang3small.png');
  min-height: 398px;
  background-repeat: repeat-x;
  background-position: 15% center;
  background-color: #ddd;
}

.storefront {
  width: 100%;
  margin: 0;
  background-color: #ddd;
}

.site-advert {
  width: 100%;
  margin: 0;
  padding: 0 25px 0 25px;
  display: inline-block;
  background-color: #222;
  background-image: url('./assets/yinyang3small.png');
  min-height: 398px;
  background-repeat: repeat-x;
  background-position: 85% center;
}

footer {
  background: #444;
  padding: 10px;
  width: 100%;
  color: #fff;
}

/* Code taken from Brewer (2020), similar row/column system to Bootstrap */

.row {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.row::after {
  display: table;
  clear: both;
  content: "";
}

.col-1 {width: 8.33%;}
.col-2 {width: 16.66%;}
.col-3 {width: 25%;}
.col-4 {width: 33.33%;}
.col-5 {width: 41.66%;}
.col-6 {width: 50%;}
.col-7 {width: 58.33%;}
.col-8 {width: 66.66%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33%;}
.col-11 {width: 91.66%;}
.col-12 {width: 100%;}

* {
  box-sizing: border-box;
}

/* Inspiration/code method for mix-blend mode provided by DevTips (2020) */

.article-text {
  color: #fff;
  mix-blend-mode: difference;
  max-width: 700px;
}

.article-text a, a:visited {
  color: #fff;
  mix-blend-mode: difference;
  text-decoration: none;
}

.article-text a:hover {
  color: #FF5403;
  mix-blend-mode: difference;
  text-decoration: none;
}

/* ################ Store Card Styles ############## */

div.forsale-card {
  background-color: #444;
  margin: 20px;
  padding: 30px 20px 30px 20px;
  border-radius: 5px;
  box-shadow: 0px 0px 1px 2px rgba(255,255,255,0.75);
  min-height: 550px;
}

div.forsale-img img {
  display: block;
  margin: auto;
  width: 200px;
  height: 200px;
}

div.forsale-card h3 {
  color: #fff;
  text-align: center;
}

div.forsale-card p {
  color: #fff;
}

/* Footer Styling */

.social-media-items {
  font-size: 1.2em;
}

.social-media-items > a {
  color: #fff;
}

.footer-links-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

.footer-links-list {
  list-style: none;
  /* float: left; */
}

.footer-links-list-item {
  padding-bottom: 15px;
}

.footer-links-list-item > a {
  text-decoration: none;
  color: #FF5;
}

.footer-links-list-item > a:hover {
  text-decoration: underline;
  color: #FF5403;
}

.copyright-info {
  font-size: 0.8em;
}

/* ################### Mobile ################# */

/* Also from Brewer (2020). Tablet/mid-size breakpoint. */

@media screen and (max-width: 680px) {
  .main-banner-wrapper, .main-banners-wrapper-1, .main-banners-wrapper-2 {
    display: flex;
    flex-direction: column;
  }

  .footer-links-container {
    display: flex;
    flex-direction: column;
  }

  ul.topmenu li:not(:nth-child(1)) {
    display: none;
  }

  ul.topmenu li.dropdownIcon {
    display: block;
    float: right;
  }

  ul.topmenu.responsive li.dropdownIcon {
    position: absolute;
    top: 0;
    right: 0;
  }

  ul.topmenu.responsive {
    position: relative;
  }

  ul.topmenu.responsive li {
    display: inline;
    float: none;
  }

  ul.topmenu.responsive li a {
    display: block;
    text-align: left;
  }

}

/* Mobile breakpoint. */

@media screen and (max-width: 480px) {
  .main-banners-wrapper-1, .main-banners-wrapper-2 {
    display: flex;
    flex-direction: column;
  }

  .footer-links-container {
    display: flex;
    flex-direction: column;
  }

  input {
    width: 100%;
  }

  button {
    width: 80%;
  }

  .col-4 {
    width: 100%;
    margin: 0;
  }

  .forsale-img img {
    width: 90%;
  }
}

